--- a/At.Matus.UtilityMeter.csproj
+++ b/At.Matus.UtilityMeter.csproj
@@ -41,12 +41,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Abstractions\IUtilityMeterReading.cs" />
     <Compile Include="BaseRate.cs" />
     <Compile Include="BaseUtilityMeter.cs" />
+    <Compile Include="Domain\ElectricityMeterReading.cs" />
     <Compile Include="ElectricityMeter.cs" />
     <Compile Include="HeatMeter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WaterMeter.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
