--- a/At.Matus.UtilityMeter.csproj
+++ b/At.Matus.UtilityMeter.csproj
@@ -45,7 +45,9 @@
     <Compile Include="BaseRate.cs" />
     <Compile Include="BaseUtilityMeter.cs" />
     <Compile Include="Domain\ElectricityMeterReading.cs" />
+    <Compile Include="Domain\HeatMeterReading.cs" />
     <Compile Include="ElectricityMeter.cs" />
+    <Compile Include="Extensions\UmrTools.cs" />
     <Compile Include="HeatMeter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WaterMeter.cs" />
