Refactor to interface-based meter and reading design
Replaced inheritance-based meter classes with IUtilityMeter and IUtilityMeterReading interfaces. Updated all meter and reading implementations to use composition and interface contracts. Renamed Unit to UnitSymbol and removed obsolete methods from IUtilityMeterReading. Centralized reading utilities in UmrTools, added UmTools for meter utilities, and generalized interpolation logic. Updated project and solution files to reflect new structure and remove legacy code. This refactor improves modularity, extensibility, and maintainability.

--- a/At.Matus.UtilityMeter.csproj
+++ b/At.Matus.UtilityMeter.csproj
@@ -41,16 +41,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Abstractions\IUtilityMeter.cs" />
     <Compile Include="Abstractions\IUtilityMeterReading.cs" />
-    <Compile Include="BaseRate.cs" />
-    <Compile Include="BaseUtilityMeter.cs" />
+    <Compile Include="Domain\ElectricityMeter.cs" />
     <Compile Include="Domain\ElectricityMeterReading.cs" />
+    <Compile Include="Domain\HeatMeter.cs" />
     <Compile Include="Domain\HeatMeterReading.cs" />
-    <Compile Include="ElectricityMeter.cs" />
+    <Compile Include="Domain\WaterMeter.cs" />
+    <Compile Include="Domain\WaterMeterReading.cs" />
     <Compile Include="Extensions\UmrTools.cs" />
-    <Compile Include="HeatMeter.cs" />
+    <Compile Include="Extensions\UmTools.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="WaterMeter.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
